[gd_scene load_steps=4 format=3 uid="uid://dpnmje7bnijci"]

[ext_resource type="Script" uid="uid://gxwvtxc6ed7c" path="res://scripts/level_select.gd" id="1_2epne"]
[ext_resource type="FontFile" uid="uid://cygmi5hueknl4" path="res://Fonts/rubik/Rubik-Black.ttf" id="1_3shnc"]
[ext_resource type="PackedScene" uid="uid://cno5emqgrbict" path="res://scenes/level_button.tscn" id="2_p0wlc"]

[node name="Level Select" type="Node2D"]
process_mode = 3
script = ExtResource("1_2epne")

[node name="LevelSelectBackground" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1088.0
color = Color(0, 0, 0, 1)

[node name="LevelSelectLabel" type="Label" parent="."]
offset_top = 16.0
offset_right = 1920.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 58.0
offset_top = 889.0
offset_right = 383.0
offset_bottom = 1016.0
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "Back"
flat = true

[node name="LevelButton1" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 168.0
offset_top = 240.0
offset_right = 376.0
offset_bottom = 448.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "1"
flat = true
icon_alignment = 1

[node name="LevelButton2" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 520.0
offset_top = 240.0
offset_right = 728.0
offset_bottom = 448.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "2"
flat = true
icon_alignment = 1

[node name="LevelButton3" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 872.0
offset_top = 248.0
offset_right = 1080.0
offset_bottom = 456.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "3"
flat = true
icon_alignment = 1

[node name="LevelButton4" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 1216.0
offset_top = 240.0
offset_right = 1424.0
offset_bottom = 448.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "4"
flat = true
icon_alignment = 1

[node name="LevelButton5" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 1536.0
offset_top = 240.0
offset_right = 1744.0
offset_bottom = 448.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "5"
flat = true
icon_alignment = 1

[node name="LevelButton6" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 168.0
offset_top = 584.0
offset_right = 376.0
offset_bottom = 792.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "6"
flat = true
icon_alignment = 1

[node name="LevelButton7" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 520.0
offset_top = 584.0
offset_right = 728.0
offset_bottom = 792.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "7"
flat = true
icon_alignment = 1

[node name="LevelButton8" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 872.0
offset_top = 592.0
offset_right = 1080.0
offset_bottom = 800.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "8"
flat = true
icon_alignment = 1

[node name="LevelButton9" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 1216.0
offset_top = 584.0
offset_right = 1424.0
offset_bottom = 792.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "9"
flat = true
icon_alignment = 1

[node name="LevelButton10" parent="." instance=ExtResource("2_p0wlc")]
offset_left = 1536.0
offset_top = 584.0
offset_right = 1744.0
offset_bottom = 792.0
grow_horizontal = 1
grow_vertical = 1
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 100
text = "10"
flat = true
icon_alignment = 1
